Corretti alcuni "bug" presenti nel report di findbugs